sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
	val lgr=getNombreValeurs()
  for(pivot<-1 to lgr-1){
    var vTemp=getValeur(pivot)
    var pTemp=pivot-1
    while(pTemp>=0 && getValeur(pTemp)>vTemp){copie(pTemp,pTemp+1);pTemp-=1}
    setValeur(pTemp+1,vTemp)
  }}
}